--- a/module2-solution/CSS/responsive_framework1.css
+++ b/module2-solution/CSS/responsive_framework1.css
@@ -1,5 +1,9 @@
 /* Using a 12 column layout */
 
+.row{
+    width: 100%;
+}
+
 /* for large display sizes */
 @media (min-width:992px) {
     .col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8{
@@ -107,8 +111,8 @@
 }
 
 /* for small display sizes */
-@media (min-width:768px) and (max-width:991px) {
-    .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8{
+@media (max-width:767px) {
+    .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12{
         float: left;
     }
     .col-sm-1{
